log
vi., 22 de abr. de 2022 11:16:08: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
9031142
vi., 22 de abr. de 2022 11:25:46: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:86:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
ca222a6
vi., 22 de abr. de 2022 11:36:25: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
afae0ee
vi., 22 de abr. de 2022 11:41:16: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
f93fb09
vi., 22 de abr. de 2022 11:49:51: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:20: error: 'return' with a value, in function returning void [-Werror]
             return NULL;
                    ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7a10a20
vi., 22 de abr. de 2022 11:50:06: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
57fea8d
vi., 22 de abr. de 2022 11:54:46: 
 treemap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:29: error: 'return' with a value, in function returning void [-Werror]
     if(tree == NULL) return NULL;
                             ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
295ee04
vi., 22 de abr. de 2022 11:55:03: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54c4d6d
vi., 22 de abr. de 2022 11:56:02: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
7bab159
vi., 22 de abr. de 2022 12:06:02: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:29: error: 'return' with a value, in function returning void [-Werror]
     if(tree == NULL) return NULL;
                             ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
255297f
vi., 22 de abr. de 2022 12:06:15: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
4aeb734
vi., 22 de abr. de 2022 12:06:58: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
661a241
vi., 22 de abr. de 2022 12:09:23: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
2630d95
vi., 22 de abr. de 2022 12:12:31: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  17|3
total_score: 30/70
7ff77e8
vi., 22 de abr. de 2022 14:17:35: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:93:45: error: 'return' with a value, in function returning void [-Werror]
     if(tree == NULL || node == NULL) return NULL;
                                             ^~~~
treemap.c:92:6: note: declared here
 void removeNode(TreeMap * tree, TreeNode* node) {
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
adf7c61
